@@ -1,3 +1,9 @@
+Tue Jun 15 17:01:42 UTC 2010  Yan Dai  <dai_y@ociweb.com>
+
+        * dds/DCPS/transport/framework/DataLinkWatchdog_T.h:
+
+          Fixed a warning.
+          
 Tue Jun 15 16:52:06 UTC 2010  Yan Dai  <dai_y@ociweb.com>
 
         * dds/DCPS/transport/framework/DataLinkWatchdog_T.h:
